Fix mobile menu overflow not showing

--- a/src/site-header.styl
+++ b/src/site-header.styl
@@ -1,7 +1,7 @@
 #site-header
 	position relative
 	z-index 1
-	overflow hidden
+	overflow visible
 	color #fff
 	text-shadow 0rem 0.05rem 0.2rem #000
 	background-color $brand-primary-color
